--- a/Taxually.TechnicalTest/Taxually.TechnicalTest/Properties/launchSettings.json
+++ b/Taxually.TechnicalTest/Taxually.TechnicalTest/Properties/launchSettings.json
@@ -4,27 +4,29 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:29533",
+      "applicationUrl": "https://localhost:29533",
       "sslPort": 44343
     }
   },
   "profiles": {
-    "Taxually.TechnicalTest": {
+    "Development": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7132;http://localhost:5132",
+      "applicationUrl": "https://localhost:7132;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
+    "Production": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7132;",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     }
   }
