--- a/Taxually.TechnicalTest/Taxually.TechnicalTest/Taxually.TechnicalTest.csproj
+++ b/Taxually.TechnicalTest/Taxually.TechnicalTest/Taxually.TechnicalTest.csproj
@@ -10,12 +10,20 @@
     <None Remove="README.md" />
   </ItemGroup>
 
+  <PropertyGroup>
+    <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\Taxually_TechnicalTest.xml</DocumentationFile>
+    <noWarn>1591</noWarn>
+  </PropertyGroup>
+
   <ItemGroup>
-    <Content Include="README.md" />
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <ProjectReference Include="..\Taxually.TechnicalTest.Domain\Taxually.TechnicalTest.Domain.csproj" />
+    <ProjectReference Include="..\Taxually.TechnicalTest.VatServices\Taxually.TechnicalTest.VatServices.csproj" />
   </ItemGroup>
 
 </Project>
